# Tailwind-Test

./: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: node.js.yml
assets/: index.7478bff4.js  index.adc1f100.js  index.e33f1b58.css  vendor.07cd7541.js  vendor.ac5a119c.js
dataDownloader/: artical_list.json  download.ipynb  pyproject.toml
dataDownloader/tests/: test_datadownloader.py
src/: App.vue  main.ts
src/assets/: artical_contents.json
src/components/: ArticalView.vue
